--- a/index.html
+++ b/index.html
@@ -137,18 +137,18 @@ function processCommand(command) {
 <body>
     <div class="container">
         <header>
-            <p>:The Process:<p>
+            <p>:closer... and closer... and closer...:<p>
         </header>
 
         <section id="password-prompt">
-            <p>Enter the passphrase:</p>
+            <p>enter code:</p>
              <div id="history"></div>
             <p id="passphrase-input">_</p>
         </section>
 
         <section id="command-screen" style="display:none;">
-            <p>MAY11:21:00HRS</p>
-<p>LOCATION:MAY11:1:00HRS</p>
+            <p>Are you ready to lose your mind?</p>
+<p>this is where</p>
 <p>THIS IS PROCESS</p>
 
              <div id="command-screen-history"></div>
